--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,31 @@
+/*navbar*/
 .navbar {
     background-color: #000;
 }
+
+#logout {
+    background: none!important;
+    border: none;
+    padding: 8px 8px;
+    color: rgba(255,255,255,.5);
+    font-family: inherit;
+    font-weight: 700;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#logout:hover {
+    background: none!important;
+    border: none;
+    padding: 8px 8px;
+    color: rgba(255,255,255,.75);
+    font-family: inherit;
+    font-weight: 700;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/*navbar*/
 
 .jumbotron {
     background-image: url('/images/background.jpg') ;
