--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,36 +1,108 @@
 <th:block>
-    <nav class="navbar navbar-expand-lg navbar-dark font-weight-bold pb-md-3">
-        <a class="navbar-brand p-0 m-0" th:href="@{/}">
-            <img th:src="@{/images/logo.png}" width="200" height="50" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#guestNav"
-                aria-controls="guestNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="guestNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <img th:src="@{/images/index/phone-call.svg}" width="30px" height="30px" alt="Call us">
-                            </div>
-                            <div class="col-xs-6">
-                                <a class="nav-link" th:href="@{tel:070011111}">070011111</a>
+    <th:block sec:authorize="isAnonymous()">
+        <nav class="navbar navbar-expand-lg navbar-dark font-weight-bold pb-md-3">
+            <a class="navbar-brand p-0 m-0" th:href="@{/}">
+                <img th:src="@{/images/logo.png}" width="200" height="50" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#guestNav"
+                    aria-controls="guestNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="guestNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <img th:src="@{/images/index/phone-call.svg}" class="callUsSvg" width="30px" height="30px"
+                                         alt="Call Us" title="Call Us">
+                                </div>
+                                <div class="col-xs-6">
+                                    <a class="nav-link" th:href="@{tel:070011111}">070011111</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/menu}">Menu</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/login}">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/register}">Register</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/menu}">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/login}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/register}">Register</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </th:block>
+    <th:block sec:authorize="isAuthenticated()">
+        <nav class="navbar navbar-expand-lg navbar-dark font-weight-bold pb-md-3">
+            <a class="navbar-brand p-0 m-0" th:href="@{/}">
+                <img th:src="@{/images/logo.png}" width="200" height="50" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#userNav"
+                    aria-controls="guestNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="userNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <img th:src="@{/images/index/phone-call.svg}" class="callUsSvg" width="30px" height="30px"
+                                         alt="Call Us" title="Call Us">
+                                </div>
+                                <div class="col-xs-6">
+                                    <a class="nav-link" th:href="@{tel:070011111}">070011111</a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/menu}">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/{username}(username=${#authentication.getName()})}">Profile</a>
+                    </li>
+                    <form th:action="@{/logout?login}" th:method="post">
+                        <button id="logout">Logout</button>
+                    </form>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+                           aria-expanded="false">
+                            <div class="media align-items-center">
+                                <span class="avatar avatar-sm rounded-circle">
+                                    <img alt="Image placeholder" th:src="@{/images/account_avatar_icon.svg}" width="30px" height="30px">
+                                </span>
+                            </div>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
+                            <a class="dropdown-item" th:href="@{/{username}(username=${#authentication.getName()})}">
+<!--                            <a class="dropdown-item" th:href="@{/{username}(username=${model.username})}">-->
+                                <span>MY PROFILE</span>
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" th:href="@{#}">
+                                <span>MY ADDRESSES</span>
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" th:href="@{#}">
+                                <span>MY ORDERS</span>
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" th:href="@{#}">
+                                <span>MY COUPONS & GIFTS</span>
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" th:href="@{#}">
+                                <span>PRIVACY SETTINGS</span>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </th:block>
 </th:block>
